@@ -4,6 +4,8 @@ cdebconf (0.65) UNRELEASED; urgency=low
     - cdebconf-text-udeb.templates:  when fixing #245624, a string format
       was modified.  Now that string freeze is over, this file is updated
       as well as translations.
+    - With text interface, append "[*]" to selected items in boolean, select
+      and multiselect questions.
   * Eugeniy Meshcheryakov
     - newt frontend: long lines in select and multiselect templates
       were wrongly truncated.  Closes: #245982
